examples/kubernetes/power-app/workshop/deployment-powerapp-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: powerapp-backend
  name: powerapp-backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerapp-backend
  template:
    metadata:
      labels:
        app: powerapp-backend
    spec:
      containers:
      - env:
        - name: MONGO_HOST
          value: powerapp-mongodb-service
        image: registry.sighup.io/workshop/sighup/powerapp-backend
        name: powerapp-backend
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
