examples/kubernetes/power-app/workshop/deployment-powerapp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: powerapp-web
  name: powerapp-web
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerapp-web
  template:
    metadata:
      labels:
        app: powerapp-web
    spec:
      containers:
      - env:
        - name: BACKEND_HOST
          value: powerapp-backend-service
        - name: COMPANY
          valueFrom:
            configMapKeyRef:
              key: COMPANY
              name: web
        - name: SOME_PASSWORD
          valueFrom:
            secretKeyRef:
              key: some-password
              name: web
        image: registry.sighup.io/workshop/sighup/powerapp-frontend
        name: powerapp-web
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
