examples/kubernetes/power-app/workshop/service-powerapp-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: powerapp-backend-service
  name: powerapp-backend-service
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: powerapp-backend
