examples/kubernetes/power-app/workshop/service-powerapp-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: powerapp-mongodb-service
  name: powerapp-mongodb-service
  namespace: dev
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: powerapp-mongodb
