examples/kubernetes/power-app/workshop/service-powerapp-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: powerapp-web-service
  name: powerapp-web-service
  namespace: dev
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
  selector:
    app: powerapp-web
  type: NodePort
