examples/kubernetes/power-app/workshop/ingress-web.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: powerapp-web
spec:
  rules:
    - host: web.test.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
